--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,6 +23,8 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           java-version: '17'
+          distribution: 'zulu'
+
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Build
