--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,13 +27,34 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+
       - name: Build
         run: ./gradlew build
+
       - name: Test
         run: ./gradlew test
+
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: openxes-cli
           path: build/libs/openxes-cli.jar
 
+      - name: Get version
+        id: get_version
+        run: |
+          echo version=$(./gradlew properties --no-daemon --console=plain -q | grep "^version:" | awk '{printf $2}') >> $GITHUB_OUTPUT
+
+      - name: Assign repository tag
+        run: |
+          git tag ${{ steps.get_version.outputs.version }}
+          git push --tags
+
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: build/libs/openxes-cli.jar
+          tag_name: ${{ steps.get_version.outputs.version }}
+          body: |
+            # OpenXES CLI
+            This is the OpenXES CLI version ${{ steps.get_version.outputs.version }}.
