--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,6 +45,15 @@ jobs:
         run: |
           echo version=$(./gradlew properties --no-daemon --console=plain -q | grep "^version:" | awk '{printf $2}') >> $GITHUB_OUTPUT
 
+      - name: Generate changelog
+        run: |
+          echo "# Changelog" > CHANGELOG.md
+          echo "" >> CHANGELOG.md
+          echo "\`\`\`" >> CHANGELOG.md
+          git log --pretty=format:"%h - %s (%an)" $(git describe --tags --abbrev=0)..HEAD >> CHANGELOG.md
+          echo "" >> CHANGELOG.md
+          echo "\`\`\`" >> CHANGELOG.md
+
       - name: Assign repository tag
         run: |
           git tag ${{ steps.get_version.outputs.version }}
@@ -55,6 +64,4 @@ jobs:
         with:
           files: build/libs/openxes-cli.jar
           tag_name: ${{ steps.get_version.outputs.version }}
-          body: |
-            # OpenXES CLI
-            This is the OpenXES CLI version ${{ steps.get_version.outputs.version }}.
+          body_path: CHANGELOG.md
